# Comp-551-A2

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt
figures/task2/: cv_hp_search_optuna.html  cv_hp_search_random.html
src/: evaluation.py  main.py  models.py  plot.py  preprocessing.py  tuner.py  utils.py
