[project]
name = "comp-551-a2"
version = "0.1.0"
description = "Logistic regression with mini-batch SGD, K-fold CV, and L1/L2 regularization on the UCI Spambase dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
